[metadata]
name = fs.sshfs
version = 0.5.1
author = Martin Larralde
author-email = martin.larralde@ens-cachan.fr
home-page = https://github.com/althonos/fs.sshfs
description = Pyfilesystem2 over SSH using paramiko
long-description = file: README.rst
license = LGPL-2.1+
platform = any
keywords = filesystem, Pyfilesystem2, ssh, sftp, paramiko
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Internet
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Filesystems

[options]
zip_safe = true
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = fs.sshfs, fs.opener
test_suite = tests
setup_requires =
  setuptools
  green
  docutils
  Pygments
install_requires =
  six ~=1.10
  paramiko ~=2.0
  fs ~=2.0.7
tests_require =
  green
  coverage
  docker

[bdist_wheel]
universal = 1

[options.extras_require]
;python_version < '3.4' = enum34

[options.entry_points]
fs.opener =
	ssh  = fs.opener.sshfs:SSHOpener
	sftp = fs.opener.sshfs:SSHOpener

[aliases]
test = green

[coverage:report]
show_missing = true
exclude_lines =
        pragma: no cover
        @abc.abstractmethod
        @abc.abstractproperty
        raise NotImplementedError
        return NotImplemented
        if six.PY3
        if six.PY2

[nosetests]
verbosity = 2
with-coverage = true
cover-xml = true
cover-package = fs.sshfs, fs.opener.sshfs
with-doctest = true
doctest-extension = .rst
rednose = true

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
inherit = false
ignore = D100,D200,D203,D213,D406,D407
