[metadata]
name = miarec_sshfs
version = file: miarec_sshfs/_version.txt
author = MiaRec
author-email = support@miarec.com
home-page = https://github.com/miarec/miarec_sshfs
description = Pyfilesystem2 over SSH using paramiko
long-description = file: README.md
long_description_content_type = text/markdown
license = LGPLv2+
license-file = COPYING
platform = any
keywords = filesystem, Pyfilesystem2, ssh, sftp, paramiko
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Internet
  Topic :: Security
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: System :: Filesystems
project_urls =
  Bug Tracker = https://github.com/miarec/miarec_sshfs/issues
  Builds = https://github.com/miarec/miarec_sshfs/actions

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.6
packages = miarec_sshfs
test_suite = tests
setup_requires =
  setuptools >=38.3.0
install_requires =
  property-cached ~=1.6
  configparser ~=3.2 ; python_version < '3'
  fs ~=2.2
  paramiko >=2.0,<4.0
  six ~=1.10
  setuptools >=38.3.0
tests_require =
  docker ~=3.6
  mock ~=2.0 ; python_version < '3.4'
  semantic_version ~=2.6

[bdist_wheel]
universal = 1

; [options.entry_points]
; fs.opener =
;  ssh  = fs.opener.sshfs:SSHOpener
;  sftp = fs.opener.sshfs:SSHOpener

[options.package_data]
miarec_sshfs = _version.txt

[coverage:report]
include = miarec_sshfs/*
show_missing = true
exclude_lines =
  pragma: no cover
  @abc.abstractmethod
  @abc.abstractproperty
  raise NotImplementedError
  return NotImplemented
  if six.PY3
  if six.PY2

[nosetests]
verbosity = 2
with-coverage = true
cover-xml = true
cover-package = miarc_sshfs
with-doctest = true
doctest-extension = .rst
rednose = true

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
inherit = false
ignore = D100,D200,D203,D213,D406,D407
